fix: y-overflow behavior for modal

--- a/feature-libs/product-configurator/rulebased/styles/_configurator-overview-filter-dialog.scss
+++ b/feature-libs/product-configurator/rulebased/styles/_configurator-overview-filter-dialog.scss
@@ -1,4 +1,7 @@
 %cx-configurator-overview-filter-dialog {
+  .cx-modal-content{
+    margin: auto;
+  }
   .cx-dialog-header {
     padding-top: 2rem;
     padding-inline-end: 1.75rem;
